--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,7 +58,7 @@
         <% else %>
           <div class="logined">
               <div class="pull-left">
-                <span class="online-status">52 MEMBERS WORKING</span>
+                <span class="online-status"><%= @platform_stats['competing_today'].to_i %> MEMBERS WORKING</span>
               </div>
 
               <div class="pull-right">
