--- a/app/views/accounts/payment_info.html.haml
+++ b/app/views/accounts/payment_info.html.haml
@@ -17,7 +17,7 @@
       %span If you are 
       %strong not a US citizen
       %span , please 
-      - url = "#{ENV['DOCUSIGN_SIGNING_DOMAIN']}/sign/#{@member.id}/#{current_user.username}/#{ENV['DOCUSIGN_INTL_TAX_TEMPLATE']}"
+      - url = "#{ENV['DOCUSIGN_SIGNING_DOMAIN']}/sign/#{@member.id}/#{current_user.username}/#{ENV['DOCUSIGN_INTL_TAX_TEMPLATE']}/#{current_user.email}"
       = link_to "complete this W-8BEN tax form", url, target: "_blank" 
       %span You only need to fill out this tax form once per year and we will keep it on file.</td>
 
