--- a/app/views/accounts/change_password.html.erb
+++ b/app/views/accounts/change_password.html.erb
@@ -6,9 +6,13 @@
         <div class="row-fluid">
 
             <div class="span8">
-                <div class="title"><h1>CHANGE YOUR PASSWORD</h1></div>
-                <p>To change your password we will email you a temporary passcode. You will then need to use this passcode to change your password.</p>
-                <a class="btn"><span>Send me a passcode</span></a>
+                <div class="title"><h1>RESET YOUR PASSWORD</h1></div>
+                <% if current_user.mav_hash %>
+                    <p>To reset your password we will email you a temporary passcode. You will then need to use this passcode to change your password.</p>
+                    <a href="#forgot-password-modal" data-toggle="modal" class="btn"><span>Request a new passcode</span></a>
+                <% else %>
+                    You are logging in with OAuth using <%= @login_type %> so there is no need to reset your password. Simply click on the <%= @login_type %> icon at the top of our site to login using your <%= @login_type %> account.
+                <% end %>
 
             </div>
 
