--- a/app/views/challenges/submit.html.erb
+++ b/app/views/challenges/submit.html.erb
@@ -16,53 +16,57 @@
                     Media : <a href="<%= s.url %>"><%= s.url %></a><br/>
                     Type : <%= s.type %><br/>
                     Comments : <%= s.comments %>
-                    <a href="#" class="btn pull-right-bottom"><span>DELETE</span></a>
+                    <a href="<%= submit_url_or_file_delete_challenge_path %>?submissionId=<%= s.id %>" class="btn pull-right-bottom"><span>DELETE</span></a>
                 </div>
                 <% end %>
 
                 <div class="title"><h1>UPLOAD FILES</h1></div>
                 <p>Upload any deliverables for your challenge submission. This can be a zip file containing code, a Word or text file containing instructions, a movie or image. Please do not embed any files in Word docs as we cannot access them. Upload them as files separately.</p>
-                <form class="form-horizontal jqTransform">
+
+                <%= form_for :file_submission, :url => submit_file_challenge_path, html: { :id => 'file_submit_form', :class => 'form-horizontal jqTransform', :multipart => true } do |f| %>
                     <div class="control-group">
                         <label class="control-label">File</label>
                         <div class="controls">
                             <div class="btn-file">
                                 <a href="#" class="btn btn-grey"><span>CHOOSE FILE</span></a>
-                                <input type="file"/><spam>No file chosen</spam>
+                                <%= file_field( 'file', 'file_name' ) %>
+                                <spam>No file chosen</spam>
                             </div>
                         </div>
                     </div>
                     <div class="control-group">
                         <label class="control-label">Comments</label>
                         <div class="controls">
-                            <textarea></textarea>
+                            <%= f.text_area :comments %>
                         </div>
                     </div>
                     <div class="control-group">
-                        <a class="btn pull-right"><span>UPLOAD</span></a>
+                        <a class="btn pull-right" onclick="document.getElementById('file_submit_form').submit();"><span>UPLOAD</span></a>
                     </div>
-                </form>
+                <% end %>                
+
 
                 <div class="title"><h1>INCLUDE URLS</h1></div>
                 <p>Add any URLs to supporting into such as a You Tube or Jing videos, a GitHub repo or any other URL you would like to include in your submission.</p>
 
-                <form class="form-horizontal jqTransform">
+                <%= form_for :url_submission, :url => submit_url_challenge_path, html: { :id => 'url_submit_form', :class => 'form-horizontal jqTransform' } do |f| %>
+                    <%= f.hidden_field :type, :value => 'URL' %>
                     <div class="control-group">
-                        <label class="control-label">File</label>
+                        <label class="control-label">URL</label>
                         <div class="controls">
-                            <input/>
+                            <%= f.text_field :link, :placeholder => 'http://' %>
                         </div>
                     </div>
                     <div class="control-group">
                         <label class="control-label">Comments</label>
                         <div class="controls">
-                            <textarea></textarea>
+                            <%= f.text_area :comments %>
                         </div>
                     </div>
                     <div class="control-group">
-                        <a class="btn pull-right"><span>ADD</span></a>
+                        <a class="btn pull-right" onclick="document.getElementById('url_submit_form').submit();"><span>ADD</span></a>
                     </div>
-                </form>
+                <% end %>
             </div>
 
 
