--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -30,8 +30,8 @@
                         <div class="span6">
                             <div class="title"><h1>WHAT WE DO</h1></div>
                             <ul>
-                                <li><a href="/what-we-do"><span><i class="icon-app"></i></span>Application<br/>Developemnt</a></li>
-                                <li><a href="/what-we-do"><span><i class="icon-mobile"></i></span>Mobile<br/>Developemnt</a></li>
+                                <li><a href="/what-we-do"><span><i class="icon-app"></i></span>Application<br/>Development</a></li>
+                                <li><a href="/what-we-do"><span><i class="icon-mobile"></i></span>Mobile<br/>Development</a></li>
                                 <li><a href="/what-we-do"><span><i class="icon-analytics"></i></span>Analytics</a></li>
                             </ul>
                         </div>
@@ -39,7 +39,7 @@
                         <div class="span6">
                             <div class="title"><h1>HOW IT WORKS</h1></div>
                             <ul>
-                                <li><a href="/how-it-works"><span><i class="icon-outsourced"></i></span>Outsourced<br/>Developemnt</a></li>
+                                <li><a href="/how-it-works"><span><i class="icon-outsourced"></i></span>Outsourced<br/>Development</a></li>
                                 <li><a href="/how-it-works"><span><i class="icon-cloud"></i></span>Cloud<br/>Technologies</a></li>
                                 <li><a href="/how-it-works"><span><i class="icon-team"></i></span>Team<br/>Augmentation</a></li>
                             </ul>
