--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -34,7 +34,7 @@
         <br/>
 
         <h2 class="discussion">DISCUSSION</h2>
-        <%= render partial: "discussions", locals: {challenge: @challenge} %>
+        <%= render partial: "discussions", locals: {challenge: @challenge, comments: @comments} %>
       </div>
 
       <div class="span4">
