--- a/app/views/challenges/_right_call_to_action.html.erb
+++ b/app/views/challenges/_right_call_to_action.html.erb
@@ -1,4 +1,4 @@
-<h2>GET STARTED</h2><p>
+<h2>PARTICIPATION</h2><p>
 <% unless challenge.challenge_type.eql?("Info Only - No Registration") %>
   <p>
   <% if current_member_participant.try('submitted?') %>
