--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -142,8 +142,8 @@
               <div class="pull-left">
                   <h2>SPOKES</h2>
                   <ul class="links">
-                      <li><a href="#">TBD1</a></li>
-                      <li><a href="#">TBD2</a></li>
+                      <li><a href="http://mesh01.cloudspokes.com">MESH01</a></li>
+                      <li><a href="http://smartsheet.cloudspokes.com">Smartsheet</a></li>
                   </ul>
               </div>
 
