--- a/app/views/members/past_challenges.html.erb
+++ b/app/views/members/past_challenges.html.erb
@@ -10,7 +10,7 @@
         <% for c in row_challenges %>                
             <div class="span6">
                 <div class="challenge well well-large">
-                    <h3><%= link_to c.name, challenge_path(c)  %></h3>
+                    <h3><%= link_to format_long_challenge_name(c.name), challenge_path(c) %></h3>
                     <strong><%= c.challenge_participants.records.first.status %></strong><br/>
                     Ended <%= c.end_date.strftime("%B %d, %Y") %><br/>
                     <%= pluralize(c.participating_members, 'member') %> participated<br/>
