--- a/app/views/challenges/submit.html.erb
+++ b/app/views/challenges/submit.html.erb
@@ -11,6 +11,7 @@
                 <h1><%= @challenge.name %></h1>
 
                 <div class="title" style="margin-top:10px"><h1>CURRENT MEDIA FOR YOUR SUBMISSION</h1></div>
+                <% if @submissions.empty? %>No media found for your submissions for the challenge.<% end %>
                 <% @submissions.each do |s| %>
                 <div class="well well-large">
                     Media : <a href="<%= s.url %>"><%= s.url %></a><br/>
