--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -36,7 +36,7 @@
                     <div class="span6">
                         <div class="challenge well well-large">
                             <h3><%= link_to format_long_challenge_name(c.name), challenge_path(c) %></h3>
-                            Due in <%= pluralize(c.days_till_close, 'day') %><br>
+                            <%= challenge_due_in_days(c.end_date,:short) %><br>
                             <%= pluralize(c.participating_members, 'member') %> participating, <%= c.registered_members %> registered<br/>
                             <strong><%= number_to_currency c.total_prize_money, precision: 0 %> for <%= platform_display c %></strong><br>
                             Tags: <%= technology_tag_links(c) %>
