--- a/app/views/judging/scorecard.html.erb
+++ b/app/views/judging/scorecard.html.erb
@@ -3,7 +3,7 @@
     <div class="content-wrapper">
     <div class="container">
 
-        <div class="title"><h1>SCORECARD FOR JEFFDONTHEMIC</h1></div>
+        <div class="title"><h1>UNDER CONSTRUCTION</h1></div>
         <div class="content">
             <div class="title"><h1>SUBMITTED ASSETS</h1></div>
             <div class="well">
